Praise the lords of COBOL, it works!